fixed get account ids endpoint to return proper object
